#8 - Add JPMS support with module-info (java module system)