@@ -12,7 +12,7 @@
   </parent>
 
   <properties>
-    <jetty.version>9.4.32.v20200930</jetty.version>
+    <jetty.version>9.4.34.v20201102</jetty.version>
   </properties>
 
   <dependencies>
@@ -35,6 +35,32 @@
       <optional>true</optional>
     </dependency>
 
+    <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-http-client</artifactId>
+      <version>0.10</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            --add-opens io.avaje.jex/io.avaje.jex.base=com.fasterxml.jackson.databind
+            --add-modules com.fasterxml.jackson.databind
+            --add-opens io.avaje.jex/io.avaje.jex=ALL-UNNAMED
+            --add-opens io.avaje.jex/io.avaje.jex.base=ALL-UNNAMED
+            --add-opens io.avaje.jex/io.avaje.jex.core=ALL-UNNAMED
+            --add-opens io.avaje.jex/io.avaje.jex.routes=ALL-UNNAMED
+            --add-opens io.avaje.jex/io.avaje.jex.jetty=ALL-UNNAMED
+          </argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
